--- a/src/RaftCore.Http/project.json
+++ b/src/RaftCore.Http/project.json
@@ -7,8 +7,9 @@
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
 
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0"
+    "RaftCore": "0.1.0-alpha-*"
   },
 
   "frameworks": {
